Fix overflowing inputs

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -518,6 +518,7 @@ button {
   border: 1px solid var(--c-border);
   border-radius: 3px;
   vertical-align: middle;
+  box-sizing: border-box;
 }
 
 /* Checkboxes look better with baseline alignment */
